--- a/debtsTracker/debtsTracker/Resources/layout/Main.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/Main.axml
@@ -21,19 +21,50 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:theme="@style/ToolBarStyle">
-                <FrameLayout
+                <LinearLayout
+                    android:orientation="horizontal"
                     android:layout_gravity="right"
-                    android:layout_width="40dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent">
                     <ImageButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/ic_done_white_24dp"
+                        android:background="@drawable/ic_mode_edit_white_24dp"
                         android:textColor="@android:color/white"
                         android:layout_gravity="center_vertical"
-                        android:id="@+id/done_button"
+                        android:id="@+id/edit_button"
+                        android:layout_marginRight="40dp"
                         android:visibility="gone" />
-                </FrameLayout>
+                    <ImageButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_remove_white_24dp"
+                        android:textColor="@android:color/white"
+                        android:layout_gravity="center_vertical"
+                        android:id="@+id/remove_button"
+                        android:layout_marginRight="8dp"
+                        android:visibility="gone" />
+                    <FrameLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical">
+                        <ImageButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/ic_add_white_24dp"
+                            android:textColor="@android:color/white"
+                            android:id="@+id/add_button"
+                            android:layout_marginRight="8dp"
+                            android:visibility="gone" />
+                        <ImageButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/ic_done_white_24dp"
+                            android:textColor="@android:color/white"
+                            android:id="@+id/done_button"
+                            android:visibility="gone" />
+                    </FrameLayout>
+                </LinearLayout>
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
         <RelativeLayout
