--- a/debtsTracker/debtsTracker/Resources/layout/Main.axml
+++ b/debtsTracker/debtsTracker/Resources/layout/Main.axml
@@ -1,86 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:id="@+id/drawer_layout">
-    <LinearLayout
+    android:orientation="vertical">
+    <android.support.v4.widget.DrawerLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/ripple">
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/app_bar_layout"
-            android:layout_width="match_parent"
-            android:layout_height="56dp">
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:minHeight="?attr/actionBarSize"
-                android:background="?attr/colorAccent"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:theme="@style/ToolBarStyle">
-                <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_gravity="right"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent">
-                    <ImageButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/ic_mode_edit_white_24dp"
-                        android:textColor="@android:color/white"
-                        android:layout_gravity="center_vertical"
-                        android:id="@+id/edit_button"
-                        android:layout_marginRight="37dp"
-                        android:visibility="gone" />
-                    <ImageButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/ic_remove_white_24dp"
-                        android:textColor="@android:color/white"
-                        android:layout_gravity="center_vertical"
-                        android:id="@+id/remove_button"
-                        android:layout_marginRight="12dp"
-                        android:visibility="gone" />
-                    <FrameLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical">
-                        <ImageButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/ic_add_white_24dp"
-                            android:textColor="@android:color/white"
-                            android:id="@+id/add_button"
-                            android:layout_marginRight="16dp"
-                            android:visibility="gone" />
-                        <ImageButton
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/ic_done_white_24dp"
-                            android:textColor="@android:color/white"
-                            android:id="@+id/done_button"
-                            android:layout_marginRight="16dp"
-                            android:visibility="gone" />
-                    </FrameLayout>
-                </LinearLayout>
-            </android.support.v7.widget.Toolbar>
-        </android.support.design.widget.AppBarLayout>
-        <RelativeLayout
-            android:id="@+id/main_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:fitsSystemWindows="true"
+        android:id="@+id/drawer_layout">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fitsSystemWindows="true" />
-    </LinearLayout>
-    <android.support.design.widget.NavigationView
-        app:itemIconTint="@color/accent"
-        app:itemTextColor="@color/primary_dark"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:id="@+id/nav_view"
-        app:menu="@menu/nav_menu"
-        app:headerLayout="@layout/drawer_header" />
-</android.support.v4.widget.DrawerLayout>
+            android:orientation="vertical"
+            android:background="@color/ripple">
+            <android.support.design.widget.AppBarLayout
+                android:id="@+id/app_bar_layout"
+                android:layout_width="match_parent"
+                android:layout_height="56dp">
+                <android.support.v7.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:minHeight="?attr/actionBarSize"
+                    android:background="?attr/colorAccent"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:theme="@style/ToolBarStyle">
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_gravity="right"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent">
+                        <ImageButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/ic_mode_edit_white_24dp"
+                            android:textColor="@android:color/white"
+                            android:layout_gravity="center_vertical"
+                            android:id="@+id/edit_button"
+                            android:layout_marginRight="37dp"
+                            android:visibility="gone" />
+                        <ImageButton
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/ic_remove_white_24dp"
+                            android:textColor="@android:color/white"
+                            android:layout_gravity="center_vertical"
+                            android:id="@+id/remove_button"
+                            android:layout_marginRight="12dp"
+                            android:visibility="gone" />
+                        <FrameLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical">
+                            <ImageButton
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:background="@drawable/ic_add_white_24dp"
+                                android:textColor="@android:color/white"
+                                android:id="@+id/add_button"
+                                android:layout_marginRight="16dp"
+                                android:visibility="gone" />
+                            <ImageButton
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:background="@drawable/ic_done_white_24dp"
+                                android:textColor="@android:color/white"
+                                android:id="@+id/done_button"
+                                android:layout_marginRight="16dp"
+                                android:visibility="gone" />
+                        </FrameLayout>
+                    </LinearLayout>
+                </android.support.v7.widget.Toolbar>
+            </android.support.design.widget.AppBarLayout>
+            <RelativeLayout
+                android:id="@+id/main_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:fitsSystemWindows="true" />
+        </LinearLayout>
+        <android.support.design.widget.NavigationView
+            app:itemIconTint="@color/accent"
+            app:itemTextColor="@color/primary_dark"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:id="@+id/nav_view"
+            app:menu="@menu/nav_menu"
+            app:headerLayout="@layout/drawer_header" />
+    </android.support.v4.widget.DrawerLayout>
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        app:adSize="BANNER"
+        app:adUnitId="ca-app-pub-9132934287753769/7990074503" />
+</LinearLayout>
